# Leo-Tank

chassis_firmware/: CMakeLists.txt  chassis_interface.xml  package.xml
chassis_firmware/launch/: hardware_interface.launch.py
chassis_firmware/src/: chassis_interface.cpp
leo/: CMakeLists.txt  package.xml
leo/config/: joystick.yaml  joystickTurret.yaml  leo_controller.yaml
leo/launch/: camera.launch.py  display.launch.xml  gazebo.launch.py  joystick.launch.py  joystick_cmd.launch.py  launch_leo.launch.py  launch_sim.launch.py  launch_spawner.launch.xml  leo_gazebo.launch copy.xml  leo_gazebo.launch.xml  rsp.launch.py
leo/rviz/: display_leo.rviz
leo/urdf/: camera.xacro  chassi.xacro  gazebo.xacro  joints.xacro  leopard.urdf.xacro  lidar.xacro  material.xacro  pipe.xacro  ros2_control.xacro  turret.xacro
pipe_firmware/: CMakeLists.txt  package.xml  pipe_controller.xml
tank_bringup/: CMakeLists.txt  package.xml
tank_controller/: CMakeLists.txt  package.xml
tank_description/: CMakeLists.txt  package.xml
tank_esp32/: CMakeLists.txt  package.xml
tank_esp32/firmware_esp32/neopixel_esp/: neopixel_esp.ino
tank_esp32/firmware_esp32/servo_esp/: servo_esp.ino
tank_esp32/firmware_esp32/servo_ws2812_esp/: servo_ws2812_esp.ino
tank_esp32/firmware_esp32/servo_ws2812_imu_esp/: servo_ws2812_imu_esp.ino
tank_esp32/launch/: esp_tank.launch.py
tank_esp32/tank_esp32/: tank_joy.py
tank_firmware/: CMakeLists.txt  package.xml  tank_interface.xml
tank_utils/: CMakeLists.txt  package.xml
turret_firmware/: CMakeLists.txt  package.xml  turret_interface.xml
(+58 files in other folders)
